# finance--tracker

./: .env.codex-feedback-automation.example  .env.release-deploy.example  .gitignore  AGENTS.md  CHANGELOG.md  Caddyfile  README.md  TO-DO-LIST.md  docker-compose.production.yml  docker-compose.proxy.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260310_01_baseline_schema.py  20260310_02_asset_record_actor_source.py  20260311_03_agent_registration.py  20260325_01_agent_request_metadata.py  20260326_01_realtime_analytics_snapshots.py  20260327_01_fixed_precision_numeric_columns.py
backend/app/: __init__.py  analytics.py  database.py  fixed_precision.py  main.py  models.py  runtime_state.py  schemas.py  security.py  settings.py  worker.py
backend/app/api/: __init__.py  router.py
backend/app/scripts/: __init__.py  import_sqlite_to_database.py  run_legacy_backfill.py  seed_agent_workspace_demo.py
backend/app/services/: agent_demo_service.py  agent_service.py  asset_entry_service.py  (+28 more)
backend/scripts/: inspect_db.py
backend/tests/: conftest.py  test_agent_api.py  test_agent_api_docs.py  test_analytics.py  test_api_contract.py  test_app_modularization.py  test_asset_crud.py  test_dashboard_corrections_and_audit.py  test_feedback.py  test_fixed_precision.py  test_market_data.py  test_push_release_note_script.py  test_release_deploy_script.py  test_release_env.py  test_runtime_redis.py  test_schema_serialization.py  test_security.py  test_sqlite_import.py  test_user_isolation.py
(+125 files in other folders)
